fix: xss 패턴 부분 수정

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -126,7 +126,6 @@ filter {
     add_field => {
       "detection_stage"   => "classification"
       "detection_source"  => "logstash"
-      "detection_version" => "1.0"
     }
     add_tag => ["web", "dvwa"]
   }
@@ -163,8 +162,8 @@ filter {
     ([http][response][status_code] == "200" or [http][response][status_code] == "500") {
     
     # 조건 2: XSS 패턴 매칭
-    if [url][query] =~ /(?i)(<script|<\/script>|javascript:|onload\s*=|onerror\s*=|onmouseover\s*=|onclick\s*=|alert\s*\(|prompt\s*\(|confirm\s*\(|document\.cookie|document\.write|eval\s*\(|%3Cscript|%3C\/script%3E|%3E|&lt;script|&gt;)/ {
-      
+    if [url][query] =~ /(?i)(script|javascript|onload|onerror|onclick|alert|prompt|confirm|eval|%3C|&lt;)/ {
+         
       mutate {
         add_field => {
           "attack_category"  => "Client-side"
